--- a/index.html
+++ b/index.html
@@ -39,30 +39,49 @@
                         d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
                 </svg>
             </a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
+            <a class="py-2 d-none d-md-inline-block" href="#Work-experiences">Work experiences</a>
+            <a class="py-2 d-none d-md-inline-block" href="#Projects">Projects</a>
+            <a class="py-2 d-none d-md-inline-block" href="#Social-Media">Social Media</a>
+            <a class="py-2 d-none d-md-inline-block" href="#sideline">Sideline</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
         </nav>
     </header>
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark">
-        <div class="col-md-5 p-lg-5 mx-auto my-5" style="height:fit-content">
-            <h1 class="display-2 fw-normal">Guillermo Dean</h1>
-            <p class="lead fw-normal">Ingeniero creativo e inquieto</p>
-            <a class="btn btn-outline-secondary" href="#">dale like</a>
+    <div class="head position-relative overflow-hidden text-center front">
+        <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;">
+            <div class="box mx-auto" style="height: 200px;;width: 100%;">
+                <h1 class="display-2 fw-normal">Guillermo Dean</h1>
+                
+                <p class="lead fw-normal"><strong>Ingeniero creativo e inquieto</strong></p>  
+                <!-- TODO cambia esta mierda -->
+            </div>
+            
         </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
+
     <hr class="featurette-divider">
+
     <div class="text-center">
-        <h1 class="text-center">Work experiences</h1>
+        <h1 class="text-center" id="Work-experiences">
+            <p><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
+                    class="bi bi-tools icon-blue" viewBox="0 0 16 16">
+                    <path
+                        d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z" />
+                </svg> Work experiences <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                    fill="currentColor" class="bi bi-tools icon-blue" viewBox="0 0 16 16">
+                    <path
+                        d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.356 3.356a1 1 0 0 0 1.414 0l1.586-1.586a1 1 0 0 0 0-1.414l-3.356-3.356a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0zm9.646 10.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708zM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11z" />
+                </svg>
+            </p>
+
+        </h1>
+
     </div>
+
     <hr class="featurette-divider">
+
     <div class="row featurette p-lg-5">
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Data processing for Gorosti society. <span class="text-muted">Sociedad Gorosti. (2010-2012)
@@ -86,10 +105,11 @@
             <a href="https://sites.google.com/view/gorosti/la-sociedad">
                 <img src="public/img/gorosti_con_textos_resize.gif" alt="Gorosti">
             </a>
-
         </div>
     </div>
+
     <hr class="featurette-divider">
+
     <div class="row featurette p-lg-5">
         <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Final degree proyect <span class="text-muted"> VISCOFAN S.A. (2014)
@@ -108,8 +128,9 @@
             </a>
         </div>
     </div>
+
     <hr class="featurette-divider">
-    <hr class="featurette-divider">
+
     <div class="row featurette p-lg-5">
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality control technician. <span class="text-muted"> Wisco Española, S.A (2014-2015)
@@ -146,7 +167,9 @@
             </a>
         </div>
     </div>
+
     <hr class="featurette-divider">
+
     <div class="row featurette p-lg-5">
         <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality Management Assistant. <span class="text-muted"> Wisco Española, S.A (2015-2016)
@@ -172,8 +195,9 @@
             </a>
         </div>
     </div>
+
     <hr class="featurette-divider">
-    <hr class="featurette-divider">
+
     <div class="row featurette p-lg-5">
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality engineer. <span class="text-muted"> ISRINGHAUSEN S.L.U. (2016 - Today)
@@ -195,45 +219,54 @@
             </a>
         </div>
     </div>
+
     <hr class="featurette-divider">
-    <div class="text-center">
-        <h1 class="text-center">Proyects</h1>
+
+    <div class="text-center" id="Projects">
+        <h1 class="text-center">Projects</h1>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette p-lg-5 project">
+            <div class="col-md-4 p-1">
+                <div class="card">
+                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">Megalitos Navarra</h5>
+                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 p-1">
+                <div class="card">
+                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Megalitos">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">Megalitos Navarra</h5>
+                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 p-1">
+                <div class="card">
+                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">Megalitos Navarra</h5>
+                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                                card's content.</p>
+                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                    </div>
+                </div>
+            </div>
     </div>
     <hr class="featurette-divider">
-    <div class="row featurette p-lg-5">
-        <div class="col-md-4">
-            <div class="card" >
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h2 class="card-title text-center">Megalitos Navarra</h5>
-                  <p class="lead">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" >
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Megalitos">
-                <div class="card-body">
-                  <h2 class="card-title text-center">Megalitos Navarra</h5>
-                  <p class="lead">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" >
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h2 class="card-title text-center">Megalitos Navarra</h5>
-                  <p class="lead">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                </div>
-            </div>
-        </div>
-    <hr class="featurette-divider">
     </div>
-    <div class="row featurette p-lg-5">
+    <div class="row featurette p-lg-5" id="Social-Media">
+
         <div class="col-md-7 text-center text-md-center overflow-hidden position-relative overflow-hidden p-3 p-md-6">
             <h2 class="featurette-heading">Social Media. <span class="text-muted">It’ll not blow your
                     mind.</span></h2>
@@ -267,15 +300,16 @@
 
                 </ul>
             </div>
-
-        </div>
-        <div class="col-md-5  p-3 p-md-6">
-            <img src="public/img/IMG_20200719_181633_2.jpg" alt="Postu1" style="width:700px;height:700px;">
         </div>
     </div>
+    <div class="col-md-5  p-3 p-md-6">
+        <img src="public/img/IMG_20200719_181633_2.jpg" alt="Postu1" style="width:700px;height:700px;">
+    </div>
+    </div>
+
     <hr class="featurette-divider">
 
-    <div class="row featurette p-lg-5">
+    <div id="sideline" class="row featurette p-lg-5">
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span>
             </h2>
@@ -289,6 +323,27 @@
     </div>
 
     <hr class="featurette-divider">
+
+    <div id="Cuadrilla" class="row featurette p-lg-5">
+        <div class="container cuadrilla">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-7">
+
+            </div>
+        </div>
+        <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
+            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span>
+            </h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod
+                semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.</p>
+        </div>
+        <div class="col-md-5 p-3 p-md-6">
+            <img src="public/img/12082017-DSC00304.jpg" alt="Postu2" style="width: 700px;;height:700px;">
+        </div>
+    </div>
 </body>
 
 </html>
