Isri and responsive images

--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
     </header>
 
     <div class="head position-relative overflow-hidden text-center front">
-        <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;">
+        <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;;width: 100%;">
             <div class="box mx-auto" style="height: 200px;;width: 100%;">
                 <h1 class="display-2 fw-normal">Guillermo Dean</h1>
-                
-                <p class="lead fw-normal"><strong>Ingeniero creativo e inquieto</strong></p>  
+
+                <p class="lead fw-normal"><strong>Ingeniero creativo e inquieto</strong></p>
                 <!-- TODO cambia esta mierda -->
             </div>
-            
+
         </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="text-center">
+    <div class="text-center flex-column">
         <h1 class="text-center" id="Work-experiences">
             <p><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor"
                     class="bi bi-tools icon-blue" viewBox="0 0 16 16">
@@ -86,7 +86,7 @@
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Data processing for Gorosti society. <span class="text-muted">Sociedad Gorosti. (2010-2012)
                 </span></h3>
-            <p class="lead m-3 pb-3">
+            <p class="lead m-3 pb-3  text-start">
                 First experience related to computer science, what I basicaly did was developing functions of
                 information analysis, search and correction of
                 incorrect data, creation of databases and data uploading.
@@ -103,7 +103,7 @@
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
             <a href="https://sites.google.com/view/gorosti/la-sociedad">
-                <img src="public/img/gorosti_con_textos_resize.gif" alt="Gorosti">
+                <img src="public/img/gorosti_con_textos_resize.gif" class="responsive" alt="Gorosti">
             </a>
         </div>
     </div>
@@ -114,7 +114,7 @@
         <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Final degree proyect <span class="text-muted"> VISCOFAN S.A. (2014)
                 </span> </h3>
-            <p class="lead m-3 pb-3">
+            <p class="lead m-3 pb-3  text-start">
                 This <a href="http://academica-e.unavarra.es/handle/2454/13185">project</a> wass drawn up in order to
                 provide solutions regarding the improvement of energy efficiency of the Cáseda de Viscofan S.A.,
                 <br>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
             <a href="https://www.isri.com/">
-                <img src="public/img/viscofan.png" alt="ISRI">
+                <img src="public/img/viscofan.png" class="responsive" alt="ISRI">
             </a>
         </div>
     </div>
@@ -135,7 +135,7 @@
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality control technician. <span class="text-muted"> Wisco Española, S.A (2014-2015)
                 </span> </h3>
-            <p class="lead m-3 pb-3">
+            <p class="lead m-3 pb-3  text-start">
                 Once I finished my industrial engineering degree, I found my first career opportunity as an escholarship
                 engineer on the local job board.
                 I learned both to work in an office and in a productive plant, to be rigorous at work and justify my
@@ -163,7 +163,7 @@
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
             <a href="https://www.wisco.es/">
-                <img src="public/img/Wisco.png" alt="WISCO">
+                <img src="public/img/Wisco.png" class="responsive" alt="WISCO">
             </a>
         </div>
     </div>
@@ -174,7 +174,7 @@
         <div class="col-md-7  text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality Management Assistant. <span class="text-muted"> Wisco Española, S.A (2015-2016)
                 </span> </h3>
-            <p class="lead m-3 pb-3">
+            <p class="lead m-3 pb-3  text-start">
                 I finished my escholarship and I continued to work at Wisco with added responsabilities.
                 I was in charge of restarting the laboratory work. Getting in contact with CAM machine, and tensile
                 testing machine parts.
@@ -191,7 +191,7 @@
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
             <a href="https://www.wisco.es/">
-                <img src="public/img/Wisco.png" alt="WISCO">
+                <img src="public/img/Wisco.png" class="responsive" alt="WISCO">
             </a>
         </div>
     </div>
@@ -202,69 +202,113 @@
         <div class="col-md-7 order-md-2 text-center text-md-center overflow-hidden position-relative p-3 p-md-6">
             <h3>Quality engineer. <span class="text-muted"> ISRINGHAUSEN S.L.U. (2016 - Today)
                 </span> </h3>
-            <p class="lead m-3 pb-3">
-                Quality/Process project management, Product quality management.
+            <p class="lead m-3 pb-3 text-start">
+                Landing a job at ISRI was an unespected opportunity. The team I had the privilege of helping was tasked
+                with relocating a whole plant production to another site.
+                <br>
+                We helped carry out the top-to-bottom new porcesses, new work instructions, tool purchasing, redefining the
+                quality standards meanwhile production line by production line were landing in Pamplona.
+                We launched new trazeability systems and updated old productive systems reducing paper waste. 
+                It was not just a relocation.
                 <br>
                 <br>
-                Customer quality management. Interim Quality/Process manager at ISRI
-                S.A.
+                The work increased and new colleagues joined our team, in fact, by now we are working more than twice the people we were at the beggining.
+                As a member of the relocation team my priorities were:
+            </p>
                 <br>
                 <br>
-                Implementation of BI solutions and <b>App development manager</b>
+                <ul class="col-md-3 text-start mx-auto">
+                    <li>
+                        <p class="lead">
+                            Quality/Process project management.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="lead">
+                            Product quality management.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="lead">
+                            Customer service management.
+                        </p>
+
+                    </li>
+                </ul>
+                <br>
+                <br>
+            <p class="lead m-3 pb-3 text-start">
+                In 2019 another big project came and I was again lucky to take part on it with one of the initial members of this adventure.
+                We involved ourselves in the new product to be industrialized and deployed at plant ISRINGHAUSEN MADRID.
+                A completly different production system (JIT) had to be revisited and adapted to the new product.
+                <br>
+                We went through hard times just after SOP but at the end we achieved what we had planned with very good results in the present.
+                <br>
+                <br>
+                Apart from this role in the project I spent two months in 2020 as Interim Quality/Process manager at ISRI S.A. (Madrid)
+            </p>
+            <p class="lead">    
+                Last but not least, over the four years I was able to promote, coach, and launch the development of many ISRI custom aplications.
+                We started from scratch and an idea to improve the product quality data handling.
+                <br>
+                Now we are working on a multi-platform solution that collects, stores, process and displays all data from a productive line.
+                As a team we now use an agile metodology, we launched our own development,database and CI/CD servers and we have deployed our apps in three group facilities. 
             </p>
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
             <a href="https://www.isri.com/">
-                <img src="public/img/isri.png" alt="ISRI">
+                <img src="public/img/isri.png" class="responsive" alt="ISRI">
             </a>
         </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="text-center" id="Projects">
+    <div class="text-center flex" id="Projects">
         <h1 class="text-center">Projects</h1>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette p-lg-5 project">
-            <div class="col-md-4 p-1">
-                <div class="card">
-                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h2 class="card-title text-center">Megalitos Navarra</h5>
-                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
-                                card's content.</p>
-                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                    </div>
+    <div class="row featurette flex m-1 project">
+        <div class="col-md-4 p-1">
+            <div class="card">
+                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Megalitos Navarra</h5>
+                        <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
                 </div>
             </div>
-            <div class="col-md-4 p-1">
-                <div class="card">
-                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Megalitos">
-                    <div class="card-body">
-                        <h2 class="card-title text-center">Megalitos Navarra</h5>
-                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
-                                card's content.</p>
-                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                    </div>
+        </div>
+        <div class="col-md-4 p-1">
+            <div class="card">
+                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Megalitos">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Megalitos Navarra</h5>
+                        <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
                 </div>
             </div>
-            <div class="col-md-4 p-1">
-                <div class="card">
-                    <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h2 class="card-title text-center">Megalitos Navarra</h5>
-                            <p class="lead">Some quick example text to build on the card title and make up the bulk of the
-                                card's content.</p>
-                            <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
-                    </div>
+        </div>
+        <div class="col-md-4 p-1">
+            <div class="card">
+                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Megalitos Navarra</h5>
+                        <p class="lead">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
                 </div>
             </div>
+        </div>
     </div>
+
     <hr class="featurette-divider">
-    </div>
+
+
     <div class="row featurette p-lg-5" id="Social-Media">
 
         <div class="col-md-7 text-center text-md-center overflow-hidden position-relative overflow-hidden p-3 p-md-6">
@@ -302,10 +346,11 @@
             </div>
         </div>
     </div>
+
     <div class="col-md-5  p-3 p-md-6">
-        <img src="public/img/IMG_20200719_181633_2.jpg" alt="Postu1" style="width:700px;height:700px;">
+        <img src="public/img/IMG_20200719_181633_2.jpg" alt="Postu1" class="responsive">
     </div>
-    </div>
+
 
     <hr class="featurette-divider">
 
@@ -318,7 +363,7 @@
                 commodo.</p>
         </div>
         <div class="col-md-5  p-3 p-md-6">
-            <img src="public/img/GD-red-700.jpg" alt="Postu2" style="width: 700px;;height:700px;">
+            <img src="public/img/GD-red-700.jpg" alt="Postu2" class="responsive">
         </div>
     </div>
 
@@ -341,9 +386,10 @@
                 commodo.</p>
         </div>
         <div class="col-md-5 p-3 p-md-6">
-            <img src="public/img/12082017-DSC00304.jpg" alt="Postu2" style="width: 700px;;height:700px;">
+            <img src="public/img/12082017-DSC00304.jpg" alt="Postu2" class="responsive">
         </div>
     </div>
+
 </body>
 
 </html>
