--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=B612:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -15,6 +16,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -28,24 +30,12 @@
 
 <body>
     <header class="site-header sticky-top py-1">
-        <nav class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2" href="#" aria-label="Product">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                    stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"
-                    viewBox="0 0 24 24">
-                    <title>Product</title>
-                    <circle cx="12" cy="12" r="10" />
-                    <path
-                        d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
-                </svg>
-            </a>
+        <nav class="container-fluid d-flex flex-column flex-md-row justify-content-between">
             <a class="py-2 d-none d-md-inline-block" href="#Work-experiences">Work experiences</a>
             <a class="py-2 d-none d-md-inline-block" href="#Projects">Projects</a>
             <a class="py-2 d-none d-md-inline-block" href="#Social-Media">Social Media</a>
             <a class="py-2 d-none d-md-inline-block" href="#sideline">Sideline</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
+            <a class="py-2 d-none d-md-inline-block" href="#cuadrilla">Cuadrilla</a>
         </nav>
     </header>
 
@@ -53,8 +43,7 @@
         <div class="col-md-5 p-lg-5 mx-auto my-5" style="height: 800px;;width: 100%;">
             <div class="box mx-auto" style="height: 200px;;width: 100%;">
                 <h1 class="display-2 fw-normal">Guillermo Dean</h1>
-
-                <p class="lead fw-normal"><strong>Ingeniero creativo e inquieto</strong></p>
+                <p class="lead"><em>- Pura vida -</em></p>
                 <!-- TODO cambia esta mierda -->
             </div>
 
@@ -206,53 +195,61 @@
                 Landing a job at ISRI was an unespected opportunity. The team I had the privilege of helping was tasked
                 with relocating a whole plant production to another site.
                 <br>
-                We helped carry out the top-to-bottom new porcesses, new work instructions, tool purchasing, redefining the
+                We helped carry out the top-to-bottom new porcesses, new work instructions, tool purchasing, redefining
+                the
                 quality standards meanwhile production line by production line were landing in Pamplona.
-                We launched new trazeability systems and updated old productive systems reducing paper waste. 
+                We launched new trazeability systems and updated old productive systems reducing paper waste.
                 It was not just a relocation.
                 <br>
                 <br>
-                The work increased and new colleagues joined our team, in fact, by now we are working more than twice the people we were at the beggining.
+                The work increased and new colleagues joined our team, in fact, by now we are working more than twice
+                the people we were at the beggining.
                 As a member of the relocation team my priorities were:
             </p>
-                <br>
-                <br>
-                <ul class="col-md-3 text-start mx-auto">
-                    <li>
-                        <p class="lead">
-                            Quality/Process project management.
-                        </p>
-                    </li>
-                    <li>
-                        <p class="lead">
-                            Product quality management.
-                        </p>
-                    </li>
-                    <li>
-                        <p class="lead">
-                            Customer service management.
-                        </p>
+            <br>
+            <br>
+            <ul class="col-md-3 text-start mx-auto">
+                <li>
+                    <p class="lead">
+                        Quality/Process project management.
+                    </p>
+                </li>
+                <li>
+                    <p class="lead">
+                        Product quality management.
+                    </p>
+                </li>
+                <li>
+                    <p class="lead">
+                        Customer service management.
+                    </p>
 
-                    </li>
-                </ul>
-                <br>
-                <br>
+                </li>
+            </ul>
+            <br>
+            <br>
             <p class="lead m-3 pb-3 text-start">
-                In 2019 another big project came and I was again lucky to take part on it with one of the initial members of this adventure.
+                In 2019 another big project came and I was again lucky to take part on it with one of the initial
+                members of this adventure.
                 We involved ourselves in the new product to be industrialized and deployed at plant ISRINGHAUSEN MADRID.
                 A completly different production system (JIT) had to be revisited and adapted to the new product.
                 <br>
-                We went through hard times just after SOP but at the end we achieved what we had planned with very good results in the present.
+                We went through hard times just after SOP but at the end we achieved what we had planned with very good
+                results in the present.
                 <br>
                 <br>
-                Apart from this role in the project I spent two months in 2020 as Interim Quality/Process manager at ISRI S.A. (Madrid)
+                Apart from this role in the project I spent two months in 2020 as Interim Quality/Process manager at
+                ISRI S.A. (Madrid)
             </p>
-            <p class="lead">    
-                Last but not least, over the four years I was able to promote, coach, and launch the development of many ISRI custom aplications.
+            <p class="lead m-3 pb-3 text-start">
+                Last but not least, over the four years I was able to promote, coach, and launch the development of many
+                ISRI custom aplications.
                 We started from scratch and an idea to improve the product quality data handling.
                 <br>
-                Now we are working on a multi-platform solution that collects, stores, process and displays all data from a productive line.
-                As a team we now use an agile metodology, we launched our own development,database and CI/CD servers and we have deployed our apps in three group facilities. 
+                Now we are working on a multi-platform solution that collects, stores, process and displays all data
+                from a productive line.
+                As a team we now use an agile metodology, we launched our own development,database and CI/CD servers and
+                we have deployed our apps in three group facilities.
             </p>
         </div>
         <div class="col-md-5  p-3 p-md-6 text-center">
@@ -273,34 +270,35 @@
     <div class="row featurette flex m-1 project">
         <div class="col-md-4 p-1">
             <div class="card">
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                <img class="card-img-top" src="public/img/fondomega_2.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h2 class="card-title text-center">Megalitos Navarra</h5>
-                        <p class="lead">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                        <p class="lead">Web application of the SCN Gorosti developed for the dissemination of the
+                            collected material related to the megalithic sites of Navarra.
+                        </p>
+                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-a  ">Discover</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 p-1">
             <div class="card">
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Megalitos">
+                <img class="card-img-top" src="public/img/eenavarra.jpg" alt="Megalitos">
                 <div class="card-body">
                     <h2 class="card-title text-center">Megalitos Navarra</h5>
-                        <p class="lead">Some quick example text to build on the card title and make up the bulk of the
-                            card's content.</p>
-                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                        <p class="lead">Information blog on energy efficiency and renewable energies.
+                        </p>
+                        <a href="http://eenavarra.blogspot.com/" class="btn btn-a ">Discover</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4 p-1">
             <div class="card">
-                <img class="card-img-top" src="public/img/IMG_20200719_181633.jpg" alt="Card image cap">
+                <img class="card-img-top" src="public/img/ceviene.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h2 class="card-title text-center">Megalitos Navarra</h5>
                         <p class="lead">Some quick example text to build on the card title and make up the bulk of the
                             card's content.</p>
-                        <a href="https://megalitosnavarra.herokuapp.com/" class="btn btn-secondary ">Go to the page</a>
+                        <a href="" class="btn btn-a ">Discover</a>
                 </div>
             </div>
         </div>
@@ -341,7 +339,6 @@
                         </svg>
                         <a href="https://github.com/guillermodean">Github</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -389,6 +386,23 @@
             <img src="public/img/12082017-DSC00304.jpg" alt="Postu2" class="responsive">
         </div>
     </div>
+    <!-- FOOTER -->
+
+    <hr class="featurette-divider">
+
+    <footer class="container">
+        <p class="float-right">
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#0161C6"
+                    class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
+                </svg>
+            </a>
+        </p>
+        <p>&copy; 2021 Guillermo Dean</p>
+    </footer>
+
 
 </body>
 
